<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.applipompes.Accueil">

    <TextView
        android:id="@+id/txtInfosJournalieres"
        style="@style/paraph"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:gravity="center"
        android:text="@string/txt_infos_journalieres_avance" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtRenseignerPompes1"
            style="@style/debut_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_renseigner_pompes_1" />

        <EditText
            android:id="@+id/editTextNbPompesFaites"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/txtRenseignerPompes2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_renseigner_pompes_2" />
    </LinearLayout>

    <Button
        android:id="@+id/btnValider"
        style="@style/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="clicValider"
        android:text="@string/txt_btn_valider" />

    <TextView
        android:id="@+id/txtInfosPompesManquantesAnnee"
        style="@style/paraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_infos_pompes_manquantes_annee" />

    <Button
        android:id="@+id/btnExplicationChallenge"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showExplication"
        android:text="@string/txt_btn_explication_challenge" />

</LinearLayout>